visualize the picture

--- a/_posts/2018-03-21-lesson-2.md
+++ b/_posts/2018-03-21-lesson-2.md
@@ -68,5 +68,5 @@ tags:
 
      >  如图所示：
      >
-     > ![kanban](../img/lesson2_kanban.png)
+     > ![kanban](../../../../img/lesson2_kanban.png)
 
