--- a/_posts/2018-04-20-lesson-6.md
+++ b/_posts/2018-04-20-lesson-6.md
@@ -19,13 +19,13 @@ tags:
 
    - a. 阅读 Asg_RH 文档，绘制用例图。 按 Task1 要求，请使用工具 UMLet，截图格式务必是 png 并控制尺寸
 
-     ![1](../../../../img/lesson6-1.PNG)
+     ![1](https://github.com/Jack-btype/Jack-btype.github.io/blob/master/img/lesson6-1.PNG)
 
 - b. 选择你熟悉的定旅馆在线服务系统（或移动 APP），如绘制用例图。并满足以下要求：
   \- 对比 Asg_RH 用例图，请用色彩标注出创新用例或子用例
   \- 尽可能识别外部系统，并用色彩标注新的外部系统和服务
 
-  ![2](../../../../img/lesson6-2.PNG)
+  ![2](https://github.com/Jack-btype/Jack-btype.github.io/blob/master/img/lesson6-2.PNG)
 
 - c. 对比两个时代、不同地区产品的用例图，总结在项目早期，发现创新的思路与方法
 
@@ -46,13 +46,13 @@ tags:
 ## 2. 业务建模
    - a. 在（任务b）基础上，用活动图建模找酒店用例。简述利用流程图发现子用例的方法。
 
-     ![3](../../../../img/lesson6-3.PNG)
+     ![3](https://github.com/Jack-btype/Jack-btype.github.io/blob/master/img/lesson6-3.PNG)
 
      方法： 通过流程图可以直观清晰地分析用例，了解动作之间的依赖关系。一般情况下，可以通过箭头的起始端点和终止端点作为用例间关系的判断依据，起始端点连接的用例既可以是终止端点的包含用例，也可以是与终止端点连接用例同级的用例，这需要根据具体情况进行分析；而并行的分叉用例通常作为其源动作的包含用例；分支用例其中的某一支可能指向extended用例。
 
 - b. 选择你身边的银行 ATM，用活动图描绘取款业务流程
 
-  ![4](../../../../img/lesson6-4.PNG)
+  ![4](https://github.com/Jack-btype/Jack-btype.github.io/blob/master/img/lesson6-4.PNG)
 
-- c. 查找淘宝退货业务官方文档，使用多泳道图，表达客户、淘宝网、淘宝商家服务系统、商家等用户和系统协同完成退货业务的过程。分析客户要完成退货业务，在淘宝网上需要实现哪些系统用例![5](../../../../img/lesson6-5.PNG)
+- c. 查找淘宝退货业务官方文档，使用多泳道图，表达客户、淘宝网、淘宝商家服务系统、商家等用户和系统协同完成退货业务的过程。分析客户要完成退货业务，在淘宝网上需要实现哪些系统用例![5](https://github.com/Jack-btype/Jack-btype.github.io/blob/master/img/lesson6-5.PNG)
 
