添加第9次作业

--- a/_posts/2018-06-02-lesson-13.md
+++ b/_posts/2018-06-02-lesson-13.md
@@ -15,48 +15,49 @@ tags:
 
 > 15331323 2018-5-13
 
-## 参考题目：
+## 1. 描述软件架构与框架之间的区别与联系
 
-[种树应用](https://github.com/Owl-Movies-Ticket-System/Dashboard/blob/gh-pages/XX1-Forest%E5%BA%94%E7%94%A8.pdf)
 
-## 1. 用例模型
 
-> 如下图：
+**软件架构**
 
-![lesson9-1](https://raw.githubusercontent.com/Jack-btype/Jack-btype.github.io/master/img/lesson9-1.PNG)
+​	是指一系列相关的抽象模式，用于指导大型软件系统各个方面的设计，是一个系统的草图，描述的对象是直接构成系统的抽象组件，各个组件之间的连接明确细致的描述组件之间的通讯。 
 
-## 2. 领域模型
+**软件框架**
 
->  如下图：
+​	是整个或部分系统的可重用设计，表现为一组抽象构件及构件实例间交互的方法，框架又是可被应用开发者定制的应用骨架，是一个可服用的设计构件，通常以构件库的形式出现，框架的关键在于框架内对象间的交互模式和控制流模式。 
 
-![lesson9-2](https://raw.githubusercontent.com/Jack-btype/Jack-btype.github.io/master/img/lesson9-2.PNG)
+**区别**
 
-## 3. 状态模型
+​	软件架构是一种软件设计的策略，而软件框架则是为了实现某种软件规范而提供基础功能实现的软件产品。软件架构不是软件，它决定了软件系统结构的划分以及各子系统之间的关系，软件框架则实现了软件架构中的基础功能，软件架构的一些决策会在框架中得到体现。 
 
-> 如下图：
+## 2. 以你的项目为案例
 
-![lesson9-3](https://raw.githubusercontent.com/Jack-btype/Jack-btype.github.io/master/img/lesson9-3.PNG)
+### 1. 绘制三层架构模型图，细致到分区
 
-## 4. 活动图
 
-> 如下图：
 
-![lesson9-1](https://raw.githubusercontent.com/Jack-btype/Jack-btype.github.io/master/img/lesson9-4.PNG)
+![lesson13-1](https://raw.githubusercontent.com/Jack-btype/Jack-btype.github.io/master/img/lesson13-1.PNG)
 
-## 5. 系统顺序图
+### 2. 结合你程序的结构，从程序员角度说明三层架构给开发者带来的便利
+- 三层架构明确的划分了每个层和每个区的内容，每个层间的依赖较低，开发者可以明确的分工，并专注于自己负责的层或分区。
+- 分层架构使的开发者可以更容易地扩展功能，添加新的子系统和模块。
+- 清晰的模块划分也更使开发者可以更容易地进行维护。
 
-> 如下图：
+## 3. 研究 VUE 与 Flux 状态管理的异同
 
-![lesson9-5](https://raw.githubusercontent.com/Jack-btype/Jack-btype.github.io/master/img/lesson9-5.PNG)
+Flux状态管理分为四层：视图层（view），动作层（action），派发层（dispatcher）和仓库层（store），专门用来构建前端框架结构，便于维护，数据流的顺序为：view发起action->action传递到dispatcher->dispatcher通知store->store的状态改变并通知view改变。
 
-## 6. 操作协议
+VUE主要基于Flux框架，适用于构建大型项目，vuex的核心分为：
 
-**操作**：设置树的种类
+- state：存放多个组件共享的状态
+- mutations：存放更改state状态的方法，用于变更状态
+- getters：将state中某个状态进行过滤，然后获取新的状态
+- actions：用于调用事件动作，并传递给mutation
+- modules：主要用来拆分state
 
-​	**操作**：设置树的种类
+Vuex数据流的顺序是：view调用store.commit提交对应的请求到store中相应的mutation函数->store改变生成新的state
 
-​	**交叉引用**：选择树
+Vuex与Flux状态管理的不同之处主要体现在数据流顺序这一方面，除此之外，Vuex是基于Flux的一种前端状态管理框架，并且Vuex包含自动渲染功能，通过生成新的state即可完成更新，并且Vuex进行组件与仓库之间的状态传递，而非组件与组件间的传递。
 
-​	**前置条件**：已创建新的种树活动
-
-​	**后置条件**：1.	创建了树的实例treeInstance；
+相同之处在于，Vuex与Flux均通过仓库（store）来存储状态（state），且二者均提供数据驱动的、可组合搭建的视图组件。
